Use latest deckz, put target latex in latex dir and start using metadata image captions
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/neural-networks/intro.tex
+++ b/shared/latex/neural-networks/intro.tex
@@ -11,7 +11,7 @@
 \end{frame}
 
 \begin{frame}{Lien (ténu) avec la biologie}
-  \imgtw[Diagram of a Neuron, Wikimedia Commons User:Dhp1080, CC BY-SA 3.]{biological-neuron}{0.9}
+  \V{["biological-neuron", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Modélisation d'un neurone}
