--- a/templates/jinja2/main.tex
+++ b/templates/jinja2/main.tex
@@ -1,5 +1,5 @@
 %% for k, v in config.items()
-\newcommand{\\VAR{k | camelcase}}{\VAR{v}}
+\newcommand{\\V{k | camelcase}}{\V{v}}
 %% endfor
 
 \documentclass[
@@ -30,7 +30,7 @@
 }
 \date{}
 \title{\DeckTitle}
-\subtitle{\VAR{target.title}}
+\subtitle{\V{target.title}}
 
 \begin{document}
 
@@ -46,13 +46,13 @@
 
 %% for section in target.sections:
 %% if section.title != None:
-\section{\VAR{section.title}}
+\section{\V{section.title}}
 %% endif
 %% for section_input in section.inputs:
 %% if section_input.title != None:
-\subsection{\VAR{section_input.title}}
+\subsection{\V{section_input.title}}
 %% endif
-\input{\VAR{section_input.path}}
+\input{\V{section_input.path}}
 %% endfor
 %% endfor
 
